quick fix to navbrand alignment

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -51,7 +51,7 @@ p {
 .pqText {
   text-align: center;
   position: sticky;
-  top: 0;
+  /* top: 40px; */
   width: 100px;
   margin-right: 124px;
   bottom: -10px;
@@ -63,7 +63,7 @@ p {
   height: 41px;
   /* top: 4px; */
   color: grey;
-  bottom: 10px;
+  /* bottom: 10px; */
   position: relative;
   display: inline-block;
   font-size: 2rem;
@@ -122,7 +122,7 @@ p {
 
 .navLogo {
   height: 32px;
-  padding: 0 14px 0 10px;
+  padding: 0 10px 0 10px;
 }
 
 /* Nav Media Queries */
