--- a/src/styles/Production.css
+++ b/src/styles/Production.css
@@ -174,10 +174,6 @@
 
 }
 
-.flipbox {
-  /* box-shadow: 3px 3px 5px lightgrey;  */
-}
-
 .flipboxInner {
   position: relative;
   width: 100%;
